--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,6 +1,13 @@
 <h1>Create new Dog</h1>
 
 <%= form_for @dog do |f|%>
-  <%=f.label :name%>
-  <%=f.text_field :name%>
-<%=end%>
+  <%= f.label :name%><br>
+  <%= f.text_field :name%><br>
+  <%= f.label :age%><br>
+  <%= f.text_field :age%><br>
+  <%= f.label :color%><br>
+  <%= f.text_field :color%><br>
+  <%= f.label :breed%><br>
+  <%= f.text_field :breed%><br>
+  <%= f.submit%>
+<%end%>
